2002-02-27  Sam Steingold  <sds@gnu.org>

	* hashweak.tst: test weak hash tables
	* tests.lisp (run-all-tests): added "hashweak"

2002-02-23  Sam Steingold  <sds@gnu.org>

	* clos.tst: test REINITIALIZE-INSTANCE

2002-02-20  Sam Steingold  <sds@gnu.org>

	* eval20.tst: added an EVAL-WHEN test

2002-02-12  Sam Steingold  <sds@gnu.org>

	* floeps.tst: new file to test float epsilons
	based on code from Stefan Kain <smk@users.sourceforge.net>
	* tests.lisp (run-all-tests): added "floeps"

2002-02-11  Sam Steingold  <sds@gnu.org>

	* alltest.tst: test (compile nil (lambda () (flet (()))))

2001-12-22  Sam Steingold  <sds@gnu.org>

	* alltest.tst (test-pos-epsilon, test-neg-epsilon): new functions

2001-12-20  Sam Steingold  <sds@gnu.org>

	* clos.tst: added WITH-SLOTS tests

2001-12-04  Sam Steingold  <sds@gnu.org>

	* array.tst, strings.tst: added REVERSE & NREVERSE tests

2001-11-28  Sam Steingold  <sds@gnu.org>

	* path.tst (foo): :case in MAKE-PATHNAME
	applies only to strings, not pathnames in the :default arg
	Reported by Kent M Pitman <pitman@world.std.com>

2001-11-27  Sam Steingold  <sds@gnu.org>

	* streamslong.tst (clisp-test-bin-i/o): new function to test
	read-float, write-float, read-integer, write-integer

2001-10-18  Sam Steingold  <sds@gnu.org>

	* clos.tst: test for initialize-instance returning junk

2001-09-10  Sam Steingold  <sds@gnu.org>

	* format.tst: test (format nil "~0f" 10)

2001-08-29  Sam Steingold  <sds@gnu.org>

	* path.tst: many more tests, inspired by
	<http://www-jcsu.jesus.cam.ac.uk/~csr21/pathname-tests.lisp>

2001-08-27  Sam Steingold  <sds@gnu.org>

	* alltest.tst (defstruct ice-cream-factory): added a keyword
	argument with no defaults to the BOA constructor

2001-08-17  Sam Steingold  <sds@gnu.org>

	* symbols.tst: pretty-printer symbols are now present in CLISP
	* excepsit.tst: ditto

2001-08-16  Sam Steingold  <sds@gnu.org>

	* loop.tst: one more test

2001-08-04  Bruno Haible  <haible@clisp.cons.org>
